<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.virginiatech.piraj.hokievent.SearchActivity">

    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="0px"
        android:layout_height="0px"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="60dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- .o.o.o.o. Tags .o.o.o.o. -->

            <TextView
                android:text="@string/searchTagsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!-- TODO Input tags -->
            <EditText
                android:id="@+id/search_tags_input"
                style="@style/TextfieldBaseStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <!-- .o.o.o.o.o.o.o.o.o. Time & Date .o.o.o.o.o.o.o.o.o. -->

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="2"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true">

                <!-- Date and time -->

                <TableRow>
                    <TextView
                        android:text="@string/searchStartDate"
                        android:layout_weight="1"/>

                    <TextView
                        android:text="@string/searchEndDate"
                        android:layout_weight="1"/>
                </TableRow>

                <TableRow>
                    <!-- TODO Use DatePicker and TimePicker? -->
                    <EditText
                        android:id="@+id/searchStartDate"
                        style="@style/TextfieldBaseStyle"
                        android:layout_weight="1"
                        android:layout_marginRight="10dp"
                        android:inputType="date" />

                    <EditText
                        android:id="@+id/searchEndDate"
                        style="@style/TextfieldBaseStyle"
                        android:layout_weight="1"
                        android:inputType="date" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:text="@string/searchStartTime"
                        android:layout_weight="1"/>

                    <TextView
                        android:text="@string/searchEndTime"
                        android:layout_weight="1"/>
                </TableRow>

                <TableRow>
                    <EditText
                        android:id="@+id/searchStartTime"
                        style="@style/TextfieldBaseStyle"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:inputType="time" />

                    <EditText
                        android:id="@+id/searchEndTime"
                        style="@style/TextfieldBaseStyle"
                        android:layout_weight="1"
                        android:inputType="time" />

                </TableRow>

            </TableLayout>

            <!-- .o.o.o.o. Distance .o.o.o.o. -->

            <TextView
                android:text="@string/searchDistanceTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!-- TODO Input distance: Slider? -->


            <!-- .o.o.o.o. Search button .o.o.o.o. -->

            <EditText
                android:id="@+id/search_input_distance"
                style="@style/TextfieldBaseStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/searchButton"
                android:text="@string/searchButton"
                style="@style/ButtonBaseStyle"
                android:layout_gravity="center|bottom"
                android:layout_marginTop="20dp"/>


        </LinearLayout>

    </ScrollView>

    <include android:id="@+id/bottomBar"
        layout="@layout/navigation_bar"/>

</RelativeLayout>

